# advent-of-code

./: .gitignore  .hlint.yaml  README.md  hie.yaml  package.yaml  stack.yaml
.github/workflows/: ci.yml  runs.yml  tests.yml
2017/f#/: AdventOfCode2017.sln  README.md
2018/: Makefile
2018/javascript/: .babelrc  .eslintrc  README.md  ava.config.js  day1.js  package-lock.json  package.json  tsconfig.json
2018/ocaml/: Makefile  README.md  advent-of-code.opam  dune-project
2018/ocaml/lib/: day_1.ml  day_15.ml  day_2.ml  day_3.ml  day_4.ml  day_5.ml  day_6.ml  day_7.ml  day_8.ml  day_9.ml  dune  util.ml
app/: Main.hs  Year2020.hs  Year2021.hs  Year2023.hs  Year2024.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/AdventOfCode/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs  DayXX.hs  Utils.hs
test/AdventOfCode/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Day18Spec.hs  Day19Spec.hs  Day1Spec.hs  Day20Spec.hs  Day21Spec.hs  Day22Spec.hs  Day23Spec.hs  Day24Spec.hs  Day25Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  (+7 more)
(+195 files in other folders)
