opam-version: "2.0"
maintainer: "<Arthur Weber> arthur.weber@viacesi.fr"
authors: "<Arthur Weber> arthur.weber@viacesi.fr"
homepage: "https://github.com/godu/advent-of-code"
bug-reports: "https://github.com/godu/advent-of-code/issues"
dev-repo: "git+https://github.com/godu/advent-of-code.git"
synopsis: "Advent Of Code"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "re"
  "ppx_inline_test" {with-test}
]
